LBT-7047 updated dates